--- a/carrousel.html
+++ b/carrousel.html
@@ -23,7 +23,7 @@
         padding-bottom: 10px;
     }
 
-.carousel__item {
+.carousel-item {
     background-color: slateblue;
     width: 200px;
     height: 250px;
@@ -34,28 +34,58 @@
     cursor: pointer;
     transition: 450ms all;
     transform-origin: center left;
+    position: relative;
 }
 
-.carousel__item:hover ~ .carousel__item{
+.carousel-item:hover ~ .carousel-item{
     transform: translate3d(100px, 0px, 0px);
 }
 
-.carousel__container:hover .carousel__item {
+.carousel__container:hover .carousel-item {
     opacity: 0.3;
 }
 
-.carousel__item:hover.carousel__item:hover {
+.carousel-item:hover.carousel-item:hover {
     transform: scale(1.5);
     opacity: 1;
+}
+
+.carousel-item__img {
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.carousel-item__details {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.9) 100%);
+    font-size: 10px;
+    opacity: 0;
+    transition: 450ms opacity;
+    padding: 10px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
 }
 
 </style>
 <body>
     <section class="carousel">
         <div class="carousel__container">
-            <div class="carousel__item">
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/imagenGrande1.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
             </div>
-            <div class="carousel__item">
+            
+            <div class="carousel-item">
             </div>
         </div>
 
