--- a/index.html
+++ b/index.html
@@ -127,5 +127,22 @@
         <input class="input" type="text" placeholder="Buscar">
     </section>
 
+    <section class="login">
+        <div class="login__container">
+            <h2>Inicia Sesión</h2>
+            <form class="login__container--form">
+                <input class="input" type="text" placeholder="Correo">
+                <input class="input" password="text" placeholder="Contraseña">
+                <button class="button">Iniciar sesión</button>
+                <div class="login__container--form--remember-me">
+                    <label>
+                        <input type="checkbox" name="" id="cbox1" value="checkbox">Recuérdame
+                    </label>
+                    <a href="/">Olvidé mi contraseña</a>
+                </div>
+            </form>
+        </div>
+
+    </section>
 </body>
 </html>
