pantalla de inicio de sesión terminada. Página principal terminada

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Header</title>
+    <title>Nice Video</title>
 </head>
 
 <body>
@@ -29,27 +29,99 @@
         <input class="input" type="text" placeholder="Buscar">
     </section>
 
-    <section class="login">
-        <div class="login__container">
-            <h2>Inicia Sesión</h2>
-            <form class="login__container--form">
-                <input class="input" type="text" placeholder="Correo">
-                <input class="input" password="text" placeholder="Contraseña">
-                <button class="button">Iniciar sesión</button>
-                <div class="login__container--form--remember-me">
-                    <label>
-                        <input type="checkbox" name="" id="cbox1" value="checkbox">Recuérdame
-                    </label>
-                    <a href="/">Olvidé mi contraseña</a>
+    <h2 class="categories__title">Mis Favoritos</h2>
+
+    <section class="carousel">
+        <div class="carousel__container">
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/descarga (2).jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
                 </div>
-            </form>
-            <section class="login__container--social-media">
-                <div><img src="./imagenes/icons8-logo-de-google-50.png" alt="Google"></div>Inicia Sesión
-                <div><img src="./imagenes/icons8-twitter-50.png" alt="Twitter"></div>Inicia Sesión
-            </section>
-            <p class="login__container--register">No tienes ninguna cuenta <a href="Regístrate"></a></p>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="./imagenes/descarga (1).jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/descarga.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/1145d64ab31c9def7fc7c989606608a4.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/18637d75b9642c9bbae6eab77fea1d9d.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/d761388c3c01313ecb14cdc8c5df36b4.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="../Curso de Frontend Developer/imagenes/c70971d47b81a2eb71ba3114958e25cc.jpg" alt="">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="./imagenes/icons8-play-50.png" alt="Play">
+                        <img src="./imagenes/icons8-más-50.png" alt="Plus">
+                    </div>
+                    <p class="carousel-item__details--title">Título descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2020 16+ 114 minutos</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+            </div>
         </div>
     </section>
+
     <footer class="footer">
         <a href="/">Términos de uso</a>
         <a href="/">Declaración de privacidad</a>
