Elementos del footer ya estan en cada extremo

--- a/flexbox_2/Untitled-1.html
+++ b/flexbox_2/Untitled-1.html
@@ -26,9 +26,28 @@
 </body>
 
 <footer class="footer">
- <a href="/">Términos y Condiciones</a>
- <a href="/">Privacidad</a>
- <a href="/">Centro de Ayuda</a>
- <a href="/">Preferencias</a>
+        <div class="footer-container">
+            <div class="footer-container-left">
+                <div class="footer-item-left">
+                    <a class="link" href=#publicidad">Publicidad</a>
+                </div>
+                <div class="footer-item-left">
+                    <a class="link" href="#negocios">Acerca de</a>
+                </div>
+            </div>
+
+            <div class="footer-container-right">
+                <div class="footer-item-right">
+                    <a class="link" href="#privacidad">Privacidad</a>
+                </div>
+                <div class="footer-item-right">
+                    <a class="link" href="#condiciones">Condiciones</a>
+                </div>
+                <div class="footer-item-right">
+                        <a class="link" href="preferencias">Preferencias</a>
+            </div>
+         </div>
+    </div>
 </footer>
+
 </html>
