Aside casi terminado. El footer se pega cuando abro el inspector

--- a/flexbox_2/Untitled-1.html
+++ b/flexbox_2/Untitled-1.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+        </style>
     <title>Document</title>
 </head>
 
@@ -17,7 +20,17 @@
 <section class="container">
     <section class="content">Content</section>
     <aside class="aside">
-        <img src="./imagenes/zapatillas-rosas-cintas-y-algunos-otros-objetos-en-el-fondo-rosa.jpg" alt="Zapatillas">
+        <figure class="aside-image-container">
+            <img src="./imagenes/zapatillas-rosas-cintas-y-algunos-otros-objetos-en-el-fondo-rosa.jpg" alt="Zapatillas">
+        </figure>
+        <section class="input-aside-container">
+            <input class="input-aside" type="Buscar" />
+        </section>
+
+        <section class="aside-text">
+            <p> Proin sed accumsan ante. Vivamus id mattis ligula, quis molestie justo. Donec id sapien ut leo viverra lacinia. Sed interdum vitae magna at dapibus. Donec blandit sapien quis ante consequat, id tincidunt turpis blandit. </p>
+        </section>
+        
     </aside>
 </section>
 
