--- a/flexbox_2/Untitled-1.html
+++ b/flexbox_2/Untitled-1.html
@@ -3,39 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
-        </style>
+    @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+    </style>
     <title>Document</title>
 </head>
 
-<header class="header"> Header </header>
+<header class="header">
     <ul class="menu">
         <li class="menu-item">home</li>
         <li class="menu-item">gallery</li>
         <li class="menu-item">about</li>
         <li class="menu-item">contact</li>
     </ul>
-<section class="container">
-    <section class="content">Content</section>
-    <aside class="aside">
-        <figure class="aside-image-container">
-            <img src="./imagenes/zapatillas-rosas-cintas-y-algunos-otros-objetos-en-el-fondo-rosa.jpg" alt="Zapatillas">
-        </figure>
-        <section class="input-aside-container">
-            <input class="input-aside" type="Buscar" />
-        </section>
+</header>
 
-        <section class="aside-text">
-            <p> Proin sed accumsan ante. Vivamus id mattis ligula, quis molestie justo. Donec id sapien ut leo viverra lacinia. Sed interdum vitae magna at dapibus. Donec blandit sapien quis ante consequat, id tincidunt turpis blandit. </p>
-        </section>
-        
-    </aside>
-</section>
+<body>
+    <section class="container">
+        <section class="content">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./imagenes/desk-of-a-modern-woman-trendy-devices-cosmetics-flowers.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./imagenes/contents-of-a-modern-womans-bag.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./imagenes/female-bag-and-accessories-on-a-pink-background.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
 
-<body class="main">
-    
+        </section>
+        <aside class="aside">
+            <figure class="aside-image-container">
+                <img src="./imagenes/zapatillas-rosas-cintas-y-algunos-otros-objetos-en-el-fondo-rosa.jpg" alt="Zapatillas">
+            </figure>
+            <section class="input-aside-container">
+                <input class="input-aside" type="Buscar" />
+            </section>
+
+            <section class="aside-text">
+                <p> Proin sed accumsan ante. Vivamus id mattis ligula, quis molestie justo. Donec id sapien ut leo viverra lacinia. Sed interdum vitae magna at dapibus. Donec blandit sapien quis ante consequat, id tincidunt turpis blandit. </p>
+            </section>
+        </aside>
+    </section>
 </body>
 
 <footer class="footer">
