--- a/flexbox_2/Untitled-1.html
+++ b/flexbox_2/Untitled-1.html
@@ -11,47 +11,93 @@
     <title>Document</title>
 </head>
 
+<section>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+        <img class="logo" src="./imagenes/Sin título.png" />
+        Vivamus
+        </a>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+    </nav>
+</section>
+
 <header class="header">
     <ul class="menu">
-        <li class="menu-item">home</li>
-        <li class="menu-item">gallery</li>
-        <li class="menu-item">about</li>
-        <li class="menu-item">contact</li>
+        <li class="menu-item">Home</li>
+        <li class="menu-item">Gallery</li>
+        <li class="menu-item">About</li>
+        <li class="menu-item">Contact</li>
     </ul>
+
 </header>
 
 <body>
     <section class="container">
         <section class="content">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./imagenes/desk-of-a-modern-woman-trendy-devices-cosmetics-flowers.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imagenes/contents-of-a-modern-womans-bag.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
                     <img src="./imagenes/female-bag-and-accessories-on-a-pink-background.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Mauris imperdiet vulputate</h5>
+                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./imagenes/messy-working-place.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Curabitur nunc nunc</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./imagenes/so-its-a-date.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Nunc feugiat neque eros</h5>
+                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
               </div>
+              </div>
+              <section class="main-section">
+                    <div class="btn-group-vertical">
+                        <button class="main-button">Vivamus</button>
+                        <button class="main-button">Interdum</button>
+                        <button class="main-button">Ligula</button>
+                        <button class="main-button">Mattis</button>
+                    </div>
+                  <section class="main-section-section-text">
+                    <p>Sed rhoncus euismod odio, ut semper urna ultrices in. Pellentesque ultrices ut tortor vel malesuada.</p>
+                  </section>
+                </div>
+              </section>
 
         </section>
+
         <aside class="aside">
             <figure class="aside-image-container">
                 <img src="./imagenes/zapatillas-rosas-cintas-y-algunos-otros-objetos-en-el-fondo-rosa.jpg" alt="Zapatillas">
             </figure>
             <section class="input-aside-container">
-                <input class="input-aside" type="Buscar" />
+                <input class="input-aside" type="Buscar" placeholder="Interdum"/>
+                <Button class="aside-button">Donec</Button>
             </section>
 
             <section class="aside-text">
@@ -85,5 +131,10 @@
          </div>
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 
 </html>
