Botones y texto de la sección principal terminados. Aún no logro ocrregir el tamaño del footer

--- a/flexbox_2/Untitled-1.html
+++ b/flexbox_2/Untitled-1.html
@@ -18,8 +18,8 @@
         Vivamus
         </a>
         <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
           </form>
     </nav>
 </section>
@@ -78,14 +78,20 @@
               </div>
               <section class="main-section">
                     <div class="btn-group-vertical">
-                        <button class="main-button">Vivamus</button>
-                        <button class="main-button">Interdum</button>
-                        <button class="main-button">Ligula</button>
-                        <button class="main-button">Mattis</button>
+                      <ul class="btn-button-main"></ul>
+                        <li><button class="main-button">Vivamus</button>
+                          <p class="main-section-text">Sed rhoncus euismod odio, ut semper urna ultrices in. </p>
+                        </li>
+                        <li><button class="main-button">Vivamus</button>
+                          <p class="main-section-text">Pellentesque ultrices ut tortor vel malesuada.</p>
+                        </li>
+                        <li><button class="main-button">Vivamus</button>
+                          <p class="main-section-text">Phasellus tempus dui blandit eros consequat eleifend.</p>
+                        </li>
+                        <li><button class="main-button">Vivamus</button>
+                          <p class="main-section-text">Vivamus tempus, libero nec dapibus varius</p>
+                        </li>
                     </div>
-                  <section class="main-section-section-text">
-                    <p>Sed rhoncus euismod odio, ut semper urna ultrices in. Pellentesque ultrices ut tortor vel malesuada.</p>
-                  </section>
                 </div>
               </section>
 
